syntax = "proto3";
import "tx.proto";
import "address.proto";
package org.csc.browserAPI.gens;

enum PBLKTModule {
     BOK = 0; // Block
};

enum PBLKCommand {
	GTB = 0; // 获取最新的block ReqGetTheBestBlock		ResGetTheBestBlock
	GBB = 1; // 获取一组block 	ReqGetBatchBlocks，ResGetBatchBlocks
	GHA = 2; // 根据 block hash 获取 block 详情	ReqGetBlockByBlockHash,ResGetBlockByBlockHash
	GHE = 3; // 根据 block height 获取 block 详情	ReqGetBlockByBlockHeight,ResGetBlockByBlockHeight
	GTH = 4; // 根据 tx hash 获取 block 详情	ReqGetBlockByTxHash，ResGetBlockByTxHash
	GGB = 5; // 获取创始块 ReqGetGenisBlock,RetGetGenisBlock
	GBX = 6;//通过区块高度获取区块里面的交易 ReqGetTxByBlkHeight ResGetTxByBlkHeight
	GBT = 7;//获取最新的block ReqGetTheBestBlock		ResGetBestBlockAndTxInfo
}

message ResGetBestBlockAndTxInfo{
	int32 rpl_code = 1;
	BlockInfo block = 2;
	int32 txCount =3;//交易数
	string txAmountCount = 4;//交易总额
}
message ReqGetTxByBlkHeight{
	int32 pageSize = 1;//每页显示条数
	int32 pageNo = 2;//当前页
	int32 blockNumber = 3;//块的高度
}
message ResGetTxByBlkHeight{
	int32 rpl_code = 1;
	//交易信息
	repeated Transaction txs = 2;
	//总条数
	int32 totalCount = 3;
}


message ReqGetGenisBlock {

}

message RetGetGenisBlock {
	int32 rpl_code = 1;
	BlockInfo block = 2;
}

message ReqGetTheBestBlock {

}

message ResGetTheBestBlock {
	int32 rpl_code = 1;
	BlockInfo block = 2;
}

message ReqGetBatchBlocks {
	int32 pageNo = 1;
	int32 pageSize = 2;
}

message ResGetBatchBlocks {
	int32 rpl_code = 1;
	repeated BlockInfo blocks = 2;
	int64 totalCount = 3;//总条数
}

message ReqGetBlockByBlockHash {
	string blockHash = 1;
}

message ResGetBlockByBlockHash {
	int32 rpl_code = 1;
	BlockInfo block = 2;
}

message ReqGetBlockByBlockHeight {
	int64 blockNumber = 1;
}

message ResGetBlockByBlockHeight {
	int32 rpl_code = 1;
	BlockInfo block = 2;
}

message ReqGetBlockByTxHash {
	string txHash = 1;
}

message ResGetBlockByTxHash {
	int32 rpl_code = 1;
	BlockInfo block = 2;
}

message BlockInfo {
	BlockHeader header = 1;
	BlockBody body = 2;
}

message BlockHeader {
	string parentHash = 1;//上一块的区块hash
	string txTrieRoot = 3; //交易数根hash
	int64 timestamp = 4; //区块产生的时间
	int64 blockNumber = 5;//number
	string extData = 7 [jstype = JS_NORMAL];
	string nonce = 8; //交易次数
	string blockHash = 9;//区块hash
	repeated string txHashs = 10; //当前区块包含的交易hash
	int32 txCount = 11;//交易总数
	int64 sliceId = 12; // 分片id
	BlockMiner miner = 13;//不完全信息，仅包含 balance,address.bcuid为新增字段，放在addressInfo中
	repeated string nodes = 14; // 节点信息
	string avetx = 15;//块内平均交易时间
}

message BlockBody {
	repeated Transaction transactions = 1;
}

message BlockMiner {
	string node = 1;//当前矿工节点
	string reward = 3; //当前矿工奖励
	string address = 4;//当前矿工的账户地址
	string bcuid = 5;
}


